--- a/Java Atualizado/fade_solutions/pom.xml
+++ b/Java Atualizado/fade_solutions/pom.xml
@@ -46,6 +46,11 @@
             <version>1.0.1</version>
         </dependency> 
         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.10</version>
+        </dependency>
+        <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
             <version>0.9.5.4</version>
